fixed shoe-menu-label appearing blue on mobile

--- a/src/drop-down-menu.css
+++ b/src/drop-down-menu.css
@@ -46,6 +46,7 @@
 .drop-down-menu>.show-menu-container-backdrop>.show-menu-container>.show-menu-label {
     font-size: 24px;
     font-weight: 700;
+    color: black;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
